--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -88,15 +88,15 @@
   --tier-d: #6b7280;
   --tier-d-muted: rgba(107, 114, 128, 0.12); */
 
-  --tier-s: #white;
+  --tier-s: black;
   --tier-s-muted: rgba(239, 68, 68, 0.5);
-  --tier-a: #000000;
+  --tier-a: black;
   --tier-a-muted: rgba(249, 115, 22, 0.5);
-  --tier-b: #000000;
+  --tier-b: black;
   --tier-b-muted: rgba(250, 204, 21, 0.5);
-  --tier-c: #000000;
+  --tier-c: black;
   --tier-c-muted: rgba(34, 197, 94, 0.5);
-  --tier-d: #000000;
+  --tier-d: black;
   --tier-d-muted: rgba(59, 130, 246, 0.5);
 
 
